apps/charlton/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: charlton
spec:
  selector:
    app: charlton
  ports:
    - port: 80
      targetPort: 3000
