apps/charlton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: charlton
spec:
  ingressClassName: traefik
  rules:
    - host: charlton.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: charlton
                port:
                  number: 80
